--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loginapp",
+  "name": "SATIS Healthcare",
   "version": "1.0.0",
   "description": "Simple authentication system",
   "main": "app.js",
